retrieve dotfiles missed from last years repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-/node_modules
+# Built files and Site
 index.html
-/dist
+dist/
+site/
+
+# Dependency directory
+node_modules
+
+# Source maps
+*.map
+
+# Files marked with gitigx
+*gitigx*
